--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,348 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import MainButton from "../components/MainButton.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-	<Welcome />
+  <main>
+	<div class="video-container">
+		<video autoplay muted loop playsinline class="background-video">
+			<source src="/src/assets/graboo_video.mp4" type="video/mp4">
+		</video>
+		
+		<div class="content-wrapper">
+			<div class="container">
+				<p class="hero-short-text">Професионални услуги за чистење и одржување на објекти.</p>
+				<div class="line"></div>
+				<h1>Graboo</h1>
+				<p class="hero-long-text">Грабоо е компанија која нуди професионални услуги за чистење и
+            одржување на станбени и деловни простори. Работиме со јасен фокус на
+            практични решенија, ефикасна изведба и коректен однос кон клиентите.</p>
+				<MainButton />
+			</div>
+		</div>
+	</div>
+	<section class="bg-light" id="about">
+        <div class="container">
+			<h2>За нас</h2>
+			<p>
+				Грабоо ДООЕЛ е фирма изградена врз реално искуство и теренска работа. Пристапуваме директно и организирано, со јасна проценка на состојбата и договор околу услугата.
+				Не работиме со фиксни шаблони – секој објект се разгледува индивидуално, со решение прилагодено на реалните потреби.
+			</p>
+		</div>
+    </section>
+    <div class="container">
+      <section id="basic-services">
+        <h2>Хигиенски услуги</h2>
+        <p>
+          Нудиме комплетни хигиенски услуги за деловни и станбени објекти, со
+          професионална опрема и средства прилагодени на типот и состојбата на
+          просторот.
+        </p>
+		<MainButton />
+        <div
+          id="carouselExampleInterval"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="4000">
+				<div class="row mt-5">
+					<div class="col-auto col-md-4">
+						<img
+						src="/src/assets/visenje_na_zgrada.jpg"
+						class="rounded"
+						alt=""
+						/>
+						<h3 class="mt-3">
+						Чистење на деловни простории (канцеларии, магацини, локали)
+						</h3>
+					</div>
+					<div class="col-auto col-md-4">
+						<img src="/src/assets/glass_cleaning.png" class="rounded" alt="" />
+						<h3 class="mt-3">Чистење на станбени објекти, згради и влезови</h3>
+					</div>
+					<div class="col-auto col-md-4">
+						<img
+						src="/src/assets/redovno_odrzuvanje.png"
+						class="rounded"
+						alt=""
+						/>
+						<h3 class="mt-3">Генерално чистење по реновирање или преселба</h3>
+					</div>
+				</div>
+            </div>
+            <div class="carousel-item" data-bs-interval="4000">
+              <div class="row mt-5">
+				<div class="col-12 col-md-4">
+					<img
+						src="/src/assets/cistenje_na_pod.png"
+						class="rounded"
+						alt=""
+					/>
+					<h3 class="mt-3">Машинско чистење и одржување на тврди подни површини</h3>
+				</div>
+				<div class="col-12 col-md-4">
+					<img
+						src="/src/assets/cistenje_na_tepison.jpg"
+						class="rounded"
+						alt=""
+					/>
+					<h3 class="mt-3">Длабинско перење на теписи и тапациран мебел</h3>
+				</div>
+				<div class="col-12 col-md-4">
+					<img
+						src="/src/assets/redovno_odrzuvanje.png"
+						class="rounded"
+						alt=""
+					/>
+					<h3 class="mt-3">Чистење на стаклени површини и излози</h3>
+				</div>
+			  </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" style="background-color: var(--primary-color);" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" style="background-color: var(--primary-color);" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+	  <hr>
+      <section id="advanced-services">
+        <h2>Специјализирани услуги</h2>
+        <p>
+          Изведуваме чистење, одржување и монтажни активности на тешко достапни
+          позиции, со користење соодветна механизација и безбедносна опрема.
+        </p>
+		<MainButton />
+        <div class="row mt-5">
+          <div class="col-sm-12 col-md-3">
+            <img
+              src="/src/assets/visenje_na_zgrada.jpg"
+              class="rounded"
+              alt=""
+            />
+            <h3 class="mt-3">
+              Чистење на стаклени и фасадни површини на висина
+            </h3>
+          </div>
+          <div class="col-sm-12 col-md-3">
+            <img
+              src="/src/assets/demontaza_na_reklama.jpg"
+              class="rounded"
+              alt=""
+            />
+            <h3 class="mt-3">
+              Монтажа и демонтажа на рекламни платна и билборди
+            </h3>
+          </div>
+          <div class="col-sm-12 col-md-3">
+            <img src="/src/assets/cistenje_silosi.jpg" class="rounded" alt="" />
+            <h3 class="mt-3">
+              Фарбање, сервисирање и одржување на недостапни позиции
+            </h3>
+          </div>
+		  <div class="col-sm-12 col-md-3">
+            <img src="/src/assets/rabota_na_visina.jpg" class="rounded" alt="" />
+            <h3 class="mt-3">
+              Изнајмување и работа со дигалки до 20 метри
+            </h3>
+          </div>
+        </div>
+      </section>
+	  <hr>
+      <section id="tutorial">
+        <h2>Начин на работа</h2>
+        <div class="row row-gap-5 mt-5">
+          <div class="col-sm-12 col-md-6">
+			<div class="d-flex align-items-center">
+				<img src="/src/assets/dialog.png" class="me-3" width="150" height="150" alt="">
+            	<h4 class="w-50">1. Контакт и кратка комуникација</h4>
+			</div>
+          </div>
+          <div class="col-sm-12 col-md-6">
+			<div class="d-flex align-items-center">
+				<img src="/src/assets/time.png" class="me-3" width="150" height="150" alt="">
+            	<h4 class="w-50">2. Проценка на просторот и обемот на работа</h4>
+			</div>
+          </div>
+          <div class="col-sm-12 col-md-6">
+			<div class="d-flex align-items-center">
+				<img src="/src/assets/budget.png" class="me-3" width="150" height="150" alt="">
+            	<h4 class="w-50">3. Договор за услугата и цената</h4>
+			</div>
+          </div>
+          <div class="col-sm-12 col-md-6">
+			<div class="d-flex align-items-center">
+				      <img src="/src/assets/window.png" class="me-3" width="150" height="150" alt="">
+            	<h4 class="w-50">4. Навремена и организирана изведба</h4>
+          </div>
+        </div>
+        <p>
+          Цените се формираат според квадратурата, состојбата и типот на
+          услугата.
+        </p>
+      </section>
+      <section id="call-to-action" class="rounded">
+        <div class="row">
+			<div class="col-md-6">
+				<h2>Зошто Graboo?</h2>
+				<ul>
+					<li>Јасен и директен пристап</li>
+					<li>Реална проценка без скриени трошоци</li>
+					<li>Флексибилност и прилагодување</li>
+					<li>Одговорна и навремена услуга</li>
+				</ul>
+			</div>
+			<div class="col-md-6">
+				<img 
+					src="/src/assets/glass_cleaner.png" 
+					class="cta-img"
+				alt="Glass Cleaner">
+			</div>
+		</div>
+      </section>
+      <!-- <section id="contact">
+        <h2>Контакт</h2>
+        <p></p>
+        <ul>
+          <li>Email: graboo2025@gmail.com</li>
+          <li>Телефон: +389 78 211 816</li>
+        </ul>
+      </section>
+    </div> -->
+  </main>
 </Layout>
+
+<style>
+
+.video-container {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	display: flex;
+	align-items: center;
+}
+
+.background-video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: -1; /* Pushes the video behind the content */
+}
+
+.video-container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* 0.5 = 50% darkness */
+  z-index: 1; /* Sits above video, below content */
+}
+
+.content-wrapper {
+	z-index: 2;
+	width: 100%;
+}
+  h1 {
+    font-size: 152px;
+	color: white;
+  }
+
+  h2 {
+    font-size: 56px;
+  }
+
+  h3,
+  h4 {
+    color: #333333;
+  }
+
+  .hero-short-text {
+    font-size: 24px;
+	color: rgb(255, 255, 255, 0.7);
+  }
+
+  .hero-long-text {
+	font-size: 18px;
+	color: white;
+	width: 75%;
+  }
+
+  .line {
+	width: 500px;
+	height: 3px;
+	background-color: var(--primary-color);
+  }
+
+  #about p {
+	font-size: 18px;
+  }
+
+  #basic-services p,
+  #advanced-services p {
+    font-size: 20px;
+    width: 75%;
+  }
+
+  #basic-services img,
+  #advanced-services img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+
+  #tutorial p {
+    font-size: 18px;
+  }
+
+  #call-to-action {
+    background-color: var(--primary-color);
+    padding: 50px;
+  }
+
+  #call-to-action h2 {
+    color: white;
+  }
+
+  #call-to-action ul li {
+    font-size: 22px;
+    color: white;
+  }
+
+  #contact ul li {
+    font-size: 22px;
+  }
+
+  #call-to-action {
+	position: relative;
+  }
+
+  .cta-img {
+	position: absolute;
+	bottom: 0;
+	width: 600px;
+	height: fit-content;
+	object-fit: cover;
+  }
+</style>
