--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@
                     </ul>
                 </div>
                 <div class="text-end">
-                    <img src="/src/assets/logo_small.png" width="200px" height="200px" alt="">
+                    <img src="/assets/logo_small.png" width="200px" height="200px" alt="">
                     <p>Грабоо ДООЕЛ &copy; 2026 - Скопје</p>
                 </div>
             </div>
