--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="/src/assets/logo_small.png" id="logo" alt="Graboo logo">
+        <img src="/assets/logo_small.png" id="logo" alt="Graboo logo">
       </a>
       <button
         class="navbar-toggler"
