--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
   <main>
 	<div class="video-container">
 		<video autoplay muted loop playsinline class="background-video">
-			<source src="/src/assets/graboo_video.mp4" type="video/mp4">
+			<source src="/assets/graboo_video.mp4" type="video/mp4">
 		</video>
 		
 		<div class="content-wrapper">
@@ -50,7 +50,7 @@ import Layout from "../layouts/Layout.astro";
 				<div class="row mt-5">
 					<div class="col-auto col-md-4">
 						<img
-						src="/src/assets/visenje_na_zgrada.jpg"
+						src="/assets/visenje_na_zgrada.jpg"
 						class="rounded"
 						alt=""
 						/>
@@ -59,12 +59,12 @@ import Layout from "../layouts/Layout.astro";
 						</h3>
 					</div>
 					<div class="col-auto col-md-4">
-						<img src="/src/assets/glass_cleaning.png" class="rounded" alt="" />
+						<img src="/assets/glass_cleaning.png" class="rounded" alt="" />
 						<h3 class="mt-3">Чистење на станбени објекти, згради и влезови</h3>
 					</div>
 					<div class="col-auto col-md-4">
 						<img
-						src="/src/assets/redovno_odrzuvanje.png"
+						src="/assets/redovno_odrzuvanje.png"
 						class="rounded"
 						alt=""
 						/>
@@ -76,7 +76,7 @@ import Layout from "../layouts/Layout.astro";
               <div class="row mt-5">
 				<div class="col-12 col-md-4">
 					<img
-						src="/src/assets/cistenje_na_pod.png"
+						src="/assets/cistenje_na_pod.png"
 						class="rounded"
 						alt=""
 					/>
@@ -84,7 +84,7 @@ import Layout from "../layouts/Layout.astro";
 				</div>
 				<div class="col-12 col-md-4">
 					<img
-						src="/src/assets/cistenje_na_tepison.jpg"
+						src="/assets/cistenje_na_tepison.jpg"
 						class="rounded"
 						alt=""
 					/>
@@ -92,7 +92,7 @@ import Layout from "../layouts/Layout.astro";
 				</div>
 				<div class="col-12 col-md-4">
 					<img
-						src="/src/assets/redovno_odrzuvanje.png"
+						src="/assets/redovno_odrzuvanje.png"
 						class="rounded"
 						alt=""
 					/>
@@ -132,7 +132,7 @@ import Layout from "../layouts/Layout.astro";
         <div class="row mt-5">
           <div class="col-sm-12 col-md-3">
             <img
-              src="/src/assets/visenje_na_zgrada.jpg"
+              src="/assets/visenje_na_zgrada.jpg"
               class="rounded"
               alt=""
             />
@@ -142,7 +142,7 @@ import Layout from "../layouts/Layout.astro";
           </div>
           <div class="col-sm-12 col-md-3">
             <img
-              src="/src/assets/demontaza_na_reklama.jpg"
+              src="/assets/demontaza_na_reklama.jpg"
               class="rounded"
               alt=""
             />
@@ -151,13 +151,13 @@ import Layout from "../layouts/Layout.astro";
             </h3>
           </div>
           <div class="col-sm-12 col-md-3">
-            <img src="/src/assets/cistenje_silosi.jpg" class="rounded" alt="" />
+            <img src="/assets/cistenje_silosi.jpg" class="rounded" alt="" />
             <h3 class="mt-3">
               Фарбање, сервисирање и одржување на недостапни позиции
             </h3>
           </div>
 		  <div class="col-sm-12 col-md-3">
-            <img src="/src/assets/rabota_na_visina.jpg" class="rounded" alt="" />
+            <img src="/assets/rabota_na_visina.jpg" class="rounded" alt="" />
             <h3 class="mt-3">
               Изнајмување и работа со дигалки до 20 метри
             </h3>
@@ -170,25 +170,25 @@ import Layout from "../layouts/Layout.astro";
         <div class="row row-gap-5 mt-5">
           <div class="col-sm-12 col-md-6">
 			<div class="d-flex align-items-center">
-				<img src="/src/assets/dialog.png" class="me-3" width="150" height="150" alt="">
+				<img src="/assets/dialog.png" class="me-3" width="150" height="150" alt="">
             	<h4 class="w-50">1. Контакт и кратка комуникација</h4>
 			</div>
           </div>
           <div class="col-sm-12 col-md-6">
 			<div class="d-flex align-items-center">
-				<img src="/src/assets/time.png" class="me-3" width="150" height="150" alt="">
+				<img src="/assets/time.png" class="me-3" width="150" height="150" alt="">
             	<h4 class="w-50">2. Проценка на просторот и обемот на работа</h4>
 			</div>
           </div>
           <div class="col-sm-12 col-md-6">
 			<div class="d-flex align-items-center">
-				<img src="/src/assets/budget.png" class="me-3" width="150" height="150" alt="">
+				<img src="/assets/budget.png" class="me-3" width="150" height="150" alt="">
             	<h4 class="w-50">3. Договор за услугата и цената</h4>
 			</div>
           </div>
           <div class="col-sm-12 col-md-6">
 			<div class="d-flex align-items-center">
-				      <img src="/src/assets/window.png" class="me-3" width="150" height="150" alt="">
+				      <img src="/assets/window.png" class="me-3" width="150" height="150" alt="">
             	<h4 class="w-50">4. Навремена и организирана изведба</h4>
           </div>
         </div>
@@ -210,7 +210,7 @@ import Layout from "../layouts/Layout.astro";
 			</div>
 			<div class="col-md-6">
 				<img 
-					src="/src/assets/glass_cleaner.png" 
+					src="/assets/glass_cleaner.png" 
 					class="cta-img"
 				alt="Glass Cleaner">
 			</div>
