--- a/src/components/MainButton.astro
+++ b/src/components/MainButton.astro
@@ -2,3 +2,13 @@
     <i class="fa-solid fa-phone-volume pe-2"></i>
     <span>Контактирај не (+389 78 211 816)</span>
 </a>
+
+<style>
+    @media screen and (max-width: 768px) {
+    
+    }
+
+    @media screen and (max-width: 412px) {
+        
+    }
+</style>
