--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-wrapper">
         <div class="container">
-            <div class="d-lg-flex align-items-center justify-content-between">
+            <div class="d-lg-flex align-items-center justify-content-between" id="flex-container">
                 <div>
                     <h2>Контакт</h2>
                     <p class="footer-text">Доколку ви е потребна услуга за чистење или одржување, контактирајте нè за понуда или информации.</p>
@@ -16,7 +16,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="text-end">
+                <div class="text-lg-end text-center">
                     <img src="/assets/logo_small.png" width="200px" height="200px" alt="">
                     <p>Грабоо ДООЕЛ &copy; 2026 - Скопје</p>
                 </div>
@@ -57,5 +57,37 @@
 
     li {
         font-size: 18px;
+    }
+
+    @media screen and (max-width: 768px) {
+        h2 {
+            text-align: center;
+        }
+
+        li {
+            text-align: center;
+        }
+
+        .footer-text {
+            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        #flex-container {
+            flex-direction: column;
+            justify-content: center;
+        }
+    }
+
+    @media screen and (max-width: 412px) {
+        .footer-wrapper {
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+        }
+
+        li {
+            text-align: start;
+        }
     }
 </style>
