--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -48,3 +48,9 @@ section {
     background-color: var(--secondary-color);
     border-color: var(--secondary-color);
 }
+
+@media screen and (max-width: 412px) {
+    section {
+        padding: 75px 0;
+    }
+}
