Changed the section title font size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,7 +123,7 @@ import Layout from "../layouts/Layout.astro";
       </section>
 	  <hr>
       <section id="advanced-services">
-        <h2>Специјализирани услуги</h2>
+        <h2 id="advanced-services-title">Специјализирани услуги</h2>
         <p>
           Изведуваме чистење, одржување и монтажни активности на тешко достапни
           позиции, со користење соодветна механизација и безбедносна опрема.
@@ -375,6 +375,10 @@ import Layout from "../layouts/Layout.astro";
 
     .line {
       width: 300px;
+    }
+
+    #advanced-services-title {
+      font-size: 38px;
     }
   }
 </style>
